src/test/ui/rfc1598-generic-associated-types/empty_generics.stderr
error: expected one of `>`, identifier, or lifetime, found `,`
  --> $DIR/empty_generics.rs:14:14
   |
14 |     type Bar<,>;
   |              ^ expected one of `>`, identifier, or lifetime here

error: aborting due to previous error

